--- a/src/components/HeNavigator/index.rn.scss
+++ b/src/components/HeNavigator/index.rn.scss
@@ -3,7 +3,7 @@
     margin-left: 30px;
   }
   &__wrapper {
-    padding-bottom: 10px;
+    padding: 20px 0;
     &__inner {
       display: flex;
       flex-direction: row;
@@ -18,6 +18,8 @@
     align-items: center;
   }
   &__title {
+    font-size: 16Px;
+    font-weight: 700;
     margin-left: -80px;
   }
 }
